--- a/src/PrivateAdmin/src/app/administration/emote-suggestions/suggestion-detail-modal/suggestion-detail-modal.component.html
+++ b/src/PrivateAdmin/src/app/administration/emote-suggestions/suggestion-detail-modal/suggestion-detail-modal.component.html
@@ -23,7 +23,7 @@
                 <th>Navrhovatel</th>
                 <td>
                     <a routerLink="/admin/users/{{suggestion.fromUser.id}}" class="text-dark"
-                        (click)="modal.close()">{{suggestion.fromUser.fullUsername}}</a>
+                        (click)="modal.close()">{{suggestion.fromUser.username}}</a>
                 </td>
             </tr>
 
