--- a/src/PrivateAdmin/src/app/administration/searching/list/list.component.html
+++ b/src/PrivateAdmin/src/app/administration/searching/list/list.component.html
@@ -21,7 +21,7 @@
                     <td>{{item.id}}</td>
                     <td>
                         <a routerLink="/admin/users/{{item.user.id}}" class="text-dark"
-                            (click)="$event.stopPropagation()">{{item.user.fullUsername}}</a>
+                            (click)="$event.stopPropagation()">{{item.user.username}}</a>
                     </td>
                     <td>
                         <a routerLink="/admin/servers/{{item.guild.id}}" class="text-dark"
