--- a/src/PrivateAdmin/src/app/administration/emotes/emote-users-list/emote-users-list.component.html
+++ b/src/PrivateAdmin/src/app/administration/emotes/emote-users-list/emote-users-list.component.html
@@ -19,7 +19,7 @@
                     <tbody>
                         <tr *ngFor="let item of list.items">
                             <td>
-                                <a routerLink="/admin/users/{{item.user.id}}" class="text-dark">{{item.user.fullUsername}}</a>
+                                <a routerLink="/admin/users/{{item.user.id}}" class="text-dark">{{item.user.username}}</a>
                             </td>
                             <td>
                                 <a routerLink="/admin/servers/{{item.guild.id}}" class="text-dark">{{item.guild.name}}</a>
