--- a/src/PrivateAdmin/src/app/administration/searching/searching-detail/searching-detail.component.html
+++ b/src/PrivateAdmin/src/app/administration/searching/searching-detail/searching-detail.component.html
@@ -3,7 +3,7 @@
         <tbody>
             <tr>
                 <th>Uživatel</th>
-                <td>{{item.user.fullUsername}}</td>
+                <td>{{item.user.username}}</td>
             </tr>
             <tr>
                 <th>Server</th>
