--- a/src/PublicAdmin/src/app/administration/searching/list/list.component.html
+++ b/src/PublicAdmin/src/app/administration/searching/list/list.component.html
@@ -16,7 +16,7 @@
                     <td>{{item.id}}</td>
                     <td>{{item.guild.name}}</td>
                     <td>{{item.channel.name}}</td>
-                    <td class="no-print">
+                    <td class="no-print" style="padding: 0.13rem 0.25rem">
                         <list-button (clicked)="showMessage(item, $event)" icon="info" title="Zobrazit zprávu"></list-button>
                     </td>
                 </tr>
