--- a/src/PublicAdmin/src/app/shared/list-button/list-button.component.html
+++ b/src/PublicAdmin/src/app/shared/list-button/list-button.component.html
@@ -1,12 +1,12 @@
-<a [routerLink]="link" class="btn-secondary btn-sm" title="{{title}}" [ngClass]="classList" *ngIf="link && !absoluteLink" (click)="onClicked($event)">
+<a [routerLink]="link" class="btn btn-secondary btn-sm" title="{{title}}" [ngClass]="classList" *ngIf="link && !absoluteLink" (click)="onClicked($event)">
     <i class="{{iconGroup}} fa-{{icon}}"></i>
 </a>
 
-<a [href]="link" class="btn-secondary btn-sm" title="{{title}}" [ngClass]="classList" *ngIf="link && absoluteLink" target="_blank"
+<a [href]="link" class="btn btn-secondary btn-sm" title="{{title}}" [ngClass]="classList" *ngIf="link && absoluteLink" target="_blank"
     (click)="onClicked($event)">
     <i class="{{iconGroup}} fa-{{icon}}"></i>
 </a>
 
-<a class="btn-secondary btn-sm ptr" title="{{title}}" [ngClass]="classList" (click)="onClicked($event)" *ngIf="!link">
+<a class="btn btn-secondary btn-sm ptr" title="{{title}}" [ngClass]="classList" (click)="onClicked($event)" *ngIf="!link">
     <i class="{{iconGroup}} fa-{{icon}}"></i>
 </a>
