--- a/src/PrivateAdmin/src/app/shared/data-list/data-list.component.scss
+++ b/src/PrivateAdmin/src/app/shared/data-list/data-list.component.scss
@@ -1,6 +1,4 @@
-form.row {
-    & select.form-control {
-        margin-right: 10px;
-        margin-left: 10px;
-    }
+form.row select.form-control {
+    margin-right: 10px;
+    margin-left: 10px;
 }
