--- a/src/PrivateAdmin/src/app/administration/searching/searching-detail/searching-detail.component.html
+++ b/src/PrivateAdmin/src/app/administration/searching/searching-detail/searching-detail.component.html
@@ -1,24 +1,22 @@
-<app-modal [title]="'Detail hledání #' + item.id">
-    <table class="table table-sm table-striped table-bordered auto-column-width">
-        <tbody>
-            <tr>
-                <th>Uživatel</th>
-                <td>{{item.user.username}}</td>
-            </tr>
-            <tr>
-                <th>Server</th>
-                <td>{{item.guild.name}}</td>
-            </tr>
-            <tr>
-                <th>Kanál</th>
-                <td>{{item.channel.name}}</td>
-            </tr>
-            <tr>
-                <th>Zpráva</th>
-                <td>
-                    <pre class="alert alert-secondary mb-0 p-2">{{item.message}}</pre>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</app-modal>
+<table class="table table-sm table-striped table-bordered auto-column-width mb-0">
+    <tbody>
+        <tr>
+            <th>Uživatel</th>
+            <td>{{item.user.username}}</td>
+        </tr>
+        <tr>
+            <th>Server</th>
+            <td>{{item.guild.name}}</td>
+        </tr>
+        <tr>
+            <th>Kanál</th>
+            <td>{{item.channel.name}}</td>
+        </tr>
+        <tr>
+            <th>Zpráva</th>
+            <td>
+                <pre class="alert alert-secondary mb-0 p-2">{{item.message}}</pre>
+            </td>
+        </tr>
+    </tbody>
+</table>
