--- a/src/PrivateAdmin/src/app/styles/layout/table.scss
+++ b/src/PrivateAdmin/src/app/styles/layout/table.scss
@@ -60,6 +60,8 @@ app-data-list {
 
         & tr {
             & td {
+                padding: 0.13rem 0.25rem !important;
+
                 &.badge-list {
                     & span:not(:last-child) {
                         margin-right: 5px;
